- Fixed execution of ezcWorkflowNodeFinally nodes.
- Fixed issue #14437: id conflict possible in ezcWorkflowVisitorNodeCollector.
- The ezcWorkflow class now implements the Countable interface. count() invoked
  for an ezcWorkflow object will return the number of nodes of the workflow.
- The ezcWorkflowExecution::loadFromVariableHandlers() and
  ezcWorkflowExecution::saveToVariableHandlers() methods now pass the
  ezcWorkflowExecution object to the ezcWorkflowVariableHandler::load() and
  ezcWorkflowVariableHandler::save() methods.


1.3.1 - Monday 09 February 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed ezcWorkflowVisitorVisualization::__toString() for workflow variable
  values with HTML entities.


1.3 - Monday 05 January 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Changed the Loop node to allow more than two incoming and outgoing nodes.


1.3rc1 - Monday 15 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes


1.3beta1 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added RelaxNG grammar for the XML-based workflow definition language.


1.3alpha1 - Monday 10 November 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented ezcWorkflow::reset() to reset a workflow.
- Implemented issue #13182: ezcWorkflowNodeInput::execute() should check
  variable conditions.
- Implemented issue #13204: Implement ezcWorkflowConditionInArray.
- Fixed issue #13467: Workflow Visualization missed end node.
- Fixed issue #13478: Canceling execution does not remove execution completely.
- Fixed a warning in ezcWorkflowExecution::unsetVariable().


1.2 - Monday 16 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.2rc1 - Tuesday 10 June 2008